# RIDE-Revolutionary-IDE

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  Phase 12 Progress.md  Phase 13 Progress.md  Phase 14 Progress.md  Phase 15 Progress.md  README.md  Rust Node Utilities Conversion.md  SECURITY.md  create_dmg.sh  package-lock.json  package.json  prepare_logos.cjs  product.json
extensions/: tsconfig.base.json
native/ride-security/: Cargo.toml  check_output.txt  check_paths.txt  check_paths_2.txt  check_paths_3.txt  check_paths_4.txt  check_paths_5.txt  check_paths_6.txt  check_paths_final.txt  errors.txt  package.json
native/ride-security/src/: action_registry.rs  async_utils.rs  auth_service.rs  buffer.rs  chat_engine.rs  collections.rs  color.rs  color_picker.rs  compression.rs  config.rs  config_resolver.rs  config_service.rs  contextkey_eval.rs  crypto.rs  cursor.rs  date.rs  debug_engine.rs  diff.rs  edit_stack.rs  editor_config.rs  editor_core.rs  editor_service.rs  env_service.rs  ext_api_commands.rs  ext_api_types.rs  ext_host.rs  ext_host_debug.rs  ext_host_documents.rs  ext_host_editors.rs  ext_host_languages.rs  ext_host_scm.rs  ext_host_terminal.rs  ext_host_workspace.rs  ext_mgmt.rs  ext_mgmt_service.rs  extension_verify.rs  file_service.rs  fs_watcher.rs  glob_engine.rs  hash_utils.rs  (+56 more)
resources/darwin/: code.icns
src/: tsconfig.json
src/vs/platform/security/common/: rideSecurityService.ts
src/vs/platform/security/node/: rideCompressionService.ts  rideDiffService.ts  rideSearchService.ts  rideSecurityService.ts  rideSyntaxService.ts  rideWorkspaceService.ts
src/vs/platform/telemetry/common/: 1dsAppender.ts  telemetryUtils.ts
src/vs/platform/terminal/test/node/: terminalEnvironment.test.ts
src/vs/workbench/contrib/welcomeGettingStarted/browser/media/: gettingStarted.css
test/mcp/: package-lock.json
