[package]
name = "ride-security"
version = "0.3.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["full"] }
napi-derive = "2"

# Crypto & Security
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

# Network & URL
url = "2"

# File System
notify = "7"
ignore = "0.4"

# Search & Text Processing
regex = "1"
rayon = "1.10"
similar = "2"

# Compression
zstd = "0.13"
zip = "2"

# Data & Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Path handling
glob = "0.3"

# Phase 8: Base utilities dependencies
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
siphasher = "1"
chrono = "0.4"
dirs = "6"
num_cpus = "1"
sysinfo = "0.32"
crc32fast = "1"
rmp-serde = "1"
toml = "0.8"
libc = "0.2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
strip = true

